Bug 130436 - Writer crash while going Tools>Redaction, if Draw not installed
Summary: Writer crash while going Tools>Redaction, if Draw not installed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: haveBacktrace
Depends on:
Blocks: Redaction
  Show dependency treegraph
 
Reported: 2020-02-04 19:15 UTC by opensuse.lietuviu.kalba
Modified: 2020-07-19 16:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (22.72 KB, text/plain)
2020-02-04 19:15 UTC, opensuse.lietuviu.kalba
Details
SAL_USE_VCLPLUGIN=gen soffice, backtrace (7.68 KB, text/plain)
2020-02-05 09:25 UTC, opensuse.lietuviu.kalba
Details
Reproduced in openSUSE Tumbleweed with installation from RPMs from LibreOffice site (14.64 KB, text/plain)
2020-02-05 09:57 UTC, opensuse.lietuviu.kalba
Details
Reproduced in openSUSE Tumbleweed with installation from RPMs from LibreOffice site, GEN rendering (5.59 KB, text/plain)
2020-02-05 10:10 UTC, opensuse.lietuviu.kalba
Details

Note You need to log in before you can comment on or make changes to this bug.
Description opensuse.lietuviu.kalba 2020-02-04 19:15:28 UTC
Created attachment 157649 [details]
backtrace

I just updated LibreOffice from 6.3.4 to 6.4.0.3 in openSUSE Leap 15.1 Linux system. I open some ODT document and go Tools>Redaction. Program freezed for few seconds and then crashed. I use KDE Plasma 5 environement.
LibreOffice installed from RPMs from LibreOffice site.

Versija: 6.4.0.3
Darinio identifikatorius: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
Procesoriaus gijos: 4; OS:Linux 4.12; Sąsajos pateikimas: numatytasis; VCL: kf5; 
Lokalė: lt-LT (lt_LT.UTF-8); Sąsajos kalba: lt-LT
Calc: threaded
Comment 1 opensuse.lietuviu.kalba 2020-02-04 19:17:05 UTC
I use Qt 5.9.7, KF 5.55
Comment 2 raal 2020-02-05 01:56:52 UTC
I can not confirm with Verze: 6.4.0.3
ID sestavení: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
Vlákna CPU: 4; OS: Linux 4.15; Vykreslování UI: výchozí; VCL: gtk3;
Comment 3 Dieter 2020-02-05 04:29:38 UTC
I also can't confirm with

Version: 7.0.0.0.alpha0+ (x64)
Build ID: eeb2d19e77d6dc47c68e8ba0920a02cf64a1247b
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win; 
Locale: de-DE (de_DE); UI-Language: en-GB
Calc: threaded

Does it happen with a specific document or with every document?
Comment 4 Julien Nabet 2020-02-05 08:40:35 UTC
Could you test this:
export SAL_USE_VCLPLUGIN=gen
soffice
?

The goal is to know if it's kf5 specific.
Comment 5 opensuse.lietuviu.kalba 2020-02-05 09:25:09 UTC
Created attachment 157658 [details]
SAL_USE_VCLPLUGIN=gen soffice, backtrace

I can reproduce in Linux with another DOCX document after starting with
SAL_USE_VCLPLUGIN=gen soffice
Comment 6 opensuse.lietuviu.kalba 2020-02-05 09:27:59 UTC
I can reproduce even with new empty document
Comment 7 opensuse.lietuviu.kalba 2020-02-05 09:29:47 UTC
I can reproduce even after moving ~/.config/libreoffice away
Comment 8 Julien Nabet 2020-02-05 09:34:37 UTC
Argh, I had forgotten the "export":
So it would be
export SAL_USE_VCLPLUGIN=gen && soffice

Indeed, without "export", I don't think the value of SAL_USE_VCLPLUGIN would be used by soffice.

(sorry for having forgotten this).
Comment 9 opensuse.lietuviu.kalba 2020-02-05 09:39:32 UTC
However I can NOT reproduce in another openSUSE system, but this system is newer (rolling distribution):

Operating System: openSUSE Tumbleweed 20200201
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Kernel Version: 5.4.14-2-default
OS Type: 64-bit
Processors: 1 × Intel® Core™ i5-4300M CPU @ 2.60GHz

RPM are not from LibreOffice, but are from default openSUSE Tumbleweed repository, i.e. sources are here 
https://build.opensuse.org/package/show/openSUSE%3AFactory/libreoffice

Versija: 6.4.0.3
Darinio identifikatorius: 40(Build:3)
Procesoriaus gijos: 1; OS:Linux 5.4; Sąsajos pateikimas: numatytasis; VCL: kf5; 
Lokalė: lt-LT (lt_LT.UTF-8); Sąsajos kalba: lt-LT
Calc: threaded
Comment 10 opensuse.lietuviu.kalba 2020-02-05 09:41:48 UTC
(In reply to Julien Nabet from comment #8)
> Argh, I had forgotten the "export":
> So it would be
> export SAL_USE_VCLPLUGIN=gen && soffice

Strange, in my system LibreOffice refuses to start at all with:
export SAL_USE_VCLPLUGIN=gen soffice
export SAL_USE_VCLPLUGIN=gtk3 soffice

but it starts with
SAL_USE_VCLPLUGIN=gen soffice
SAL_USE_VCLPLUGIN=gtk3 soffice
and I see that GUI is a bit different (thus variable was passed).
Comment 11 opensuse.lietuviu.kalba 2020-02-05 09:48:10 UTC
(In reply to Julien Nabet from comment #8)
> Argh, I had forgotten the "export":
> So it would be
> export SAL_USE_VCLPLUGIN=gen && soffice

I can reproduce this bug in openSUSE Leap 15.1 with (adding "&&")
> export SAL_USE_VCLPLUGIN=gen && soffice
Comment 12 Julien Nabet 2020-02-05 09:52:39 UTC
Linux packages provided by TDF are more for package maintainers from various Linux distrib. Indeed, dependencies must taken into account.
I think you should revert to 6.3.4 in your first machine and wait for an official update from OpenSuse.
Perhaps these links (from https://unix.stackexchange.com/questions/6766/is-there-is-a-ppa-service-equivalent-in-the-fedora-world) may help:
Main page: https://build.opensuse.org/
Wiki page: http://en.opensuse.org//openSUSE:Build_Service

Whatever the machine, if you got a crash with LO packages from official OpenSuse, could you provide a bt? (see https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace)
Comment 13 opensuse.lietuviu.kalba 2020-02-05 09:57:41 UTC
Created attachment 157662 [details]
Reproduced in openSUSE Tumbleweed with installation from RPMs from LibreOffice site

In openSUSE Tumbleweed, I uninstalled LibreOffice from default openSUSE repo.
After this, I installed LibreOffice from RPMs from LibreOffice site. 
Now I CAN reproduce this bug in openSUSE Tumbleweed too.
Seems some bug in LibreOffice site RPMs compilation?

Versija: 6.4.0.3
Darinio identifikatorius: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
Procesoriaus gijos: 1; OS:Linux 5.4; Sąsajos pateikimas: numatytasis; VCL: kf5; 
Lokalė: lt-LT (lt_LT.UTF-8); Sąsajos kalba: lt-LT
Calc: threaded

Operating System: openSUSE Tumbleweed 20200201
KDE Plasma Version: 5.17.5
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.1
Kernel Version: 5.4.14-2-default
OS Type: 64-bit
Comment 14 Julien Nabet 2020-02-05 10:04:57 UTC
Michael: I noticed
#11 0x00007f1b7a56f77a in SfxObjectFactory::GetViewFactory(unsigned short) const () from /opt/libreoffice6.4/program/libmergedlo.so
in bt, any thoughts here? Do you think it may also be a dup on another kf5 bug?

opensuse.lietuviu.kalba: thank you for your feedback.
Could you also provide a bt with gen rendering? The goal would be to compare the bt). I expect not to have Qt5Instance of course but would like to know if we also got SfxObjectFactory::GetViewFactory or if it's completely different
Comment 15 opensuse.lietuviu.kalba 2020-02-05 10:06:53 UTC
gen rendering in openSUSE Leap 15.1:
https://bugs.documentfoundation.org/attachment.cgi?id=157658
Comment 16 opensuse.lietuviu.kalba 2020-02-05 10:10:33 UTC
Created attachment 157665 [details]
Reproduced in openSUSE Tumbleweed with installation from RPMs from LibreOffice site, GEN rendering


openSUSE Tumbleweed, RPMs from LibreOffice official site, gen rendering, going Tools > Redaction:

export SAL_USE_VCLPLUGIN=gen && soffice
KCrash: Application 'soffice.bin' crashing...
KCrash: Attempting to start /usr/lib64/libexec/drkonqi from kdeinit
sock_file=/run/user/1000/kdeinit5__0
Comment 17 Julien Nabet 2020-02-05 10:17:32 UTC
Interesting, same "SfxObjectFactory::GetViewFactory" pb with gen rendering too.
So not KF5 specific.

Considering bts provided, let's put this one to NEW.
Comment 18 Michael Weghorn 2020-02-05 10:40:55 UTC
I was unable to reproduce in my up-to-date Tumbleweed VM with the distro-provided LibreOffice (6.4.0.3, Build-ID 40 (Build:3)), and 6.4.0.3 downloaded from the LO website, and a current TDF master daily build. When selecting "Tools" -> "Redact" after creating a new file, Draw opens.

A backtrace from a daily build with debug symbols from [1] might possibly help to see more of what's going on, but it's hard to say without being able to reproduce oneself.

[1] https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@86-TDF-dbg/
Comment 19 Muhammet Kara 2020-02-05 12:04:14 UTC
A curious issue. I cannot repro on master dev build.
Comment 20 opensuse.lietuviu.kalba 2020-02-05 14:43:29 UTC
To make test more reproducible
I downloaded
https://download.opensuse.org/distribution/leap/15.1/live/openSUSE-Leap-15.1-KDE-Live-x86_64-Current.iso 
(openSUSE-Leap-15.1-KDE-Live-x86_64-Snapshot8.10.15-Media.iso)
Run this LiveDVD it in VirtualBox 6.1.0r135406.
Installed LibreOffice 6.4.0 from RPMs from official site.
I installed gdb.
I can reproduce bug:

#8 0x00007f4377b1377a in SfxObjectFactory::GetViewFactory(unsigned short) const () from /opt/libreoffice6.4/program/libmergedlo.so

This is list of my installed LibreOffice 6.4 packages (I installed not all packages):

# zypper se -i -s 6.4
Loading repository data...
Reading installed packages...

S | Name                                       | Type    | Version   | Arch
--+--------------------------------------------+---------+-----------+-------
i | libobasis6.4-base                          | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-calc                          | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-core                          | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-en-US                         | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-extension-mediawiki-publisher | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-extension-pdf-import          | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-gnome-integration             | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-graphicfilter                 | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-images                        | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-impress                       | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-kde-integration               | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-lt                            | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-lt-help                       | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-math                          | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-ogltrans                      | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-onlineupdate                  | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-ooofonts                      | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-ooolinguistic                 | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-pyuno                         | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-writer                        | package | 6.4.0.3-3 | x86_64
i | libobasis6.4-xsltfilter                    | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4                             | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-base                        | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-calc                        | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-dict-en                     | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-dict-fr                     | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-dict-lt                     | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-en-US                       | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-freedesktop-menus           | package | 6.4.0-3   | noarch
i | libreoffice6.4-impress                     | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-lt                          | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-math                        | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-ure                         | package | 6.4.0.3-3 | x86_64
i | libreoffice6.4-writer                      | package | 6.4.0.3-3 | x86_64
Comment 21 opensuse.lietuviu.kalba 2020-02-05 14:45:59 UTC
(In reply to Michael Weghorn from comment #18)
> When
> selecting "Tools" -> "Redact" after creating a new file, Draw opens.

Indeed, I did not selected to install Draw!
I can not reproduce this bug after installing 
libreoffice6.4-draw
libobasis6.4-draw

Thus Writer should show warning, that Draw is mandatory for Redact functionality instead of crash.
Comment 22 Julien Nabet 2020-02-05 14:52:48 UTC
I don't know why there are distinct packages for modules in LO for Linux since I don't think you can omit a module in LO. So IMHO, it should be "NOTABUG".
Comment 23 opensuse.lietuviu.kalba 2020-02-05 14:55:37 UTC
Maybe not bug in LibreOffice itself, but the bug in splitting modules for RPMs in _official LibreOffice site_
Comment 24 opensuse.lietuviu.kalba 2020-02-05 14:57:45 UTC
Then You can treat it as enhancement request to check presence of Draw for Redact functionality and behave gracefully if Draw is not installed.
Comment 25 Julien Nabet 2020-02-05 15:10:15 UTC
(In reply to opensuse.lietuviu.kalba from comment #24)
> Then You can treat it as enhancement request to check presence of Draw for
> Redact functionality and behave gracefully if Draw is not installed.

No, I agree with you either there should be a main LO package which includes all modules or these kinds of cases should be managed.
Comment 26 Commit Notification 2020-06-30 19:38:32 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/be85a4d7cc7c15472de9d1584837d5bff7640bf9

Resolves tdf#130436: Crash on redaction without Draw

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 Rene Engelhard 2020-06-30 20:03:28 UTC
will this be backported for 7.0.0 or do I need to do so for my packages? (which also allow to omit draw, like upstream and any other distro package)
Comment 28 Rene Engelhard 2020-06-30 20:24:35 UTC
(or even 6.4, for that matter.)
Comment 29 Commit Notification 2020-06-30 23:38:52 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/49109fa3e450017acd32d119c07f6f27056d75e3

Resolves tdf#130436: Crash on redaction without Draw

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Adolfo Jayme Barrientos 2020-07-01 00:44:06 UTC
Won’t backport to 6.4 at this point because the patch introduces a new translatable string and that series has only one planned point release left now (6.4.6).