Resolves tdf#130436: Crash on redaction without Draw

Change-Id: Iaa418e9ad5c6e9ba1892cbb428a8a381f52c4246